config/kube/deployment.yml
# ./kube/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-rails-deployment
  labels:
    app: k8s-rails
    tier: app
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: k8s-rails
      tier: app
  template:
    metadata:
      labels:
        app: k8s-rails
        tier: app
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
      - name: k8s-rails
        image: igbanam/k8s-rails
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
