config/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rails-service
spec:
  ports:
    - port: 3000
  selector:
    app: k8s-rails
    tier: app
