config/kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-rails-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - $DNS_WEBSITE
    secretName: k8s-rails-tls
  defaultBackend:
    service:
      name: k8s-rails-service
      port:
        number: 80
  rules:
  - host: $DNS_WEBSITE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-rails-service
            port:
              number: 3000
